package com.reservas.residencial.application.ports.out;

import com.reservas.residencial.domain.models.Comprobante;

import java.util.Optional;

public interface ComprobanteRepositoryPort {
    Comprobante save(Comprobante comprobante);
    Optional<Comprobante> findByPagoId(Long pagoId);
}
